--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ ourg.">
                       to U.S. assistant professor)
                       at <a href="https://research.monash.edu/en/persons/jiangshan-yu"> Cybersecurity
                       Lab</a>, Faculty of Information Technology, <a href="https://www.monash.edu">
-                            Monash Unviersity
+                            Monash University
                           </a>, Australia, and an honorary research
                       fellow working
                       with <a href="http://www.cs.bham.ac.uk/~mdr/">
@@ -137,11 +137,10 @@ ourg.">
                       with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
                       Prof. Paulo Esteves-Verissimo
                           </a>(IEEE and ACM Fellow)
-                      at <a href="http://wwwen.uni.lu/snt"> SnT
-                          </a>, <a href="http://wwwen.uni.lu">
+                      at <a href="http://wwwen.uni.lu/snt"> SnT</a>, <a href="http://wwwen.uni.lu">
                             University of Luxembourg
                           </a>. <br><br> My research interests are in
-                          the area of cyber security and
+                          the area of cybersecurity and
                           cryptography. In particular, the focus of my
                           research has been on (designing and
                           attacking) Blockchain consensus,
@@ -408,7 +407,7 @@ Today,</i> etc.
                            <a href="https://ieeexplore.ieee.org/document/8645706"><b>RepuCoin</b></a>,
                            provides <u>the first blockchain system
                            that is able to tolerate 51%
-                           attack</u>. This system <u>may save
+                           attacks</u>. This system <u>may save
                            potentially millions of US dollars every
                            month from the attacks</u>, and increase the
                            confidence of enterprise in adapting
@@ -426,7 +425,7 @@ Finder</a>, <a href="https://www.toutiao.com/i6671048333609402887">
 今日头条(Toutiao)</a>, ZDNet, Sohu, BTC Wires, ScienceDaily, Ethereum World News,
 EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
-                           Our work on ledger-based end-to-end secure
+                           Our work on the ledger-based end-to-end secure
                            messaging system,
                            called <a href="https://ieeexplore.ieee.org/document/8007243"><b>DECIM</b></a>,
                            provides <u>the first end-to-end secure
@@ -459,8 +458,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
                           Our work on
                           <a href="http://fc19.ifca.ai/preproceedings/69-preproceedings.pdf"><b>blockchain
-                          forensics</b></a>, has traced >70% transactions
-                          of supposed-to-be privacy- preserving
+                          forensics</b></a> has traced >70% transactions
+                          of supposed-to-be privacy-preserving
                           cryptocurrencies, including Monero,
                           ByteCoin, and DigitalNote.<br> <br>
 
@@ -1092,7 +1091,7 @@ ml"> Cipher CFP </a>,
                         martial arts</a> (MMA) school in Australia in
                         2010, and founded Endless Martial Arts
                         Association in 2011. I've been invited several
-                        times to give performance in different places
+                        times to give a performance in different places
                         (e.g. Viva La Gong at Wollongong, AU; Town
                         Hall at Birmingham, UK; etc).</font>
 
