--- a/index.html
+++ b/index.html
@@ -820,9 +820,22 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <li><b>Comference Program Committee Member</b></li>
                               <ul type="circle">
                                 <li>
-                                38th IEEE International Symposium on
+                                The 38th IEEE International Symposium on
                                 Reliable Distributed
                                 Systems <b>(SRDS)</b>, 2019.</a>
+                              </li>
+
+                                <li>
+                                   The 20th International Conference on Cryptology in India <b>(Indocrypt)</b>, 2019.</a>
+                              </li>
+
+                                <li>
+                                   The 18th IEEE International
+                                    Conference on Trust, Security and
+                                    Privacy in Computing and
+                                    Communications<b> (IEEE
+                                    TrustCom)
+                                   </b>, 2019.</a>
                               </li>
                               <li>
                                 IEEE Global Communications
@@ -856,7 +869,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li><i> ACM Transactions on Transactions on Privacy and Security <b>(ACM TOPS)</b></i></li>
 	                        <li><i>IEEE
 	                        Transactions on Information Forensics &
-	                              Security <b>(IEEE TIFS)</b></i></li>
+	                            Security <b>(IEEE TIFS)</b></i></li>
+                                <li><i>IEEE Transactions on
+	                            Computers <b>(IEEE TC)</b></i></li>
                                 <li><i>
                                       IEEE Transactions on Cloud
                                       Computing <b>(IEEE TCC)</b>
@@ -865,7 +880,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                       IEEE Transactions on Industrial Informatics <b>(IEEE TII)</b>
                                 </i></li>
                                 <li><i>IEEE Wireless Communications</i></li>
-                            <li><i>IEEE Access</i></li>
+                                <li><i>IEEE Access</i></li>
+                                <li><i>IEEE Software</i></li>
                                 <li><i>
                                 Future Generation Computer Systems
                                 </i></li>
