--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@ ourg.">
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
-
+                          <li>
+                            <b>[2019-04-22]</b> Our two papers on
+                            blockchain transaction untraceability have
+                            been accepted by <b>CSF'19</b> and <b>AsiaCCS'19</b>.
+                           </li>
                           <li>
                             <b>[2019-03-25] </b> RepuCoin has been
                            covered by over 60 news media globally
@@ -577,6 +581,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Conference:</b><br>
                               <ol type="1" start = "9">
+                           <li>
+                          Jiangshan Yu, Man Ho Allen Au, and Paulo
+                          Veríssimo.<br> <b>Re-thinking untraceability in the
+                          CryptoNote-style blockchain.</b>. <br><i>IEEE Computer Security Foundations Symposium (CSF) 2019.</i>
+                           </li>
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
                             Yang, Qiuliang Xu, and Wang Fat
@@ -587,13 +596,13 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Cryptography and Data Security 2019
                             (FC19).</i>
                           </li>
-                          <li>
-                            Runchao Han, Jiangshan Yu, Joseph Liu, and
-                            Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating
-                            CryptoNote-Style
-                            blockchains"</b></a>. <br> <i> Inscrypt
-                            2018.</i>
-                          </li>
+                          <!-- <li> -->
+                          <!--   Runchao Han, Jiangshan Yu, Joseph Liu, and -->
+                          <!--   Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating -->
+                          <!--   CryptoNote-Style -->
+                          <!--   blockchains"</b></a>. <br> <i> Inscrypt -->
+                          <!--   2018.</i> -->
+                          <!-- </li> -->
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
@@ -609,24 +618,24 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             compromisable storage systems"</b></a>, <br> <i>IEEE TrustCom 2017.</i>
                           </li>
 
-                          <li>Marcus Völp, Francisco Rocha, Jérémie
-                          Decouchant, Jiangshan Yu, and Paulo
-                          Verissimo.<br> <a href="http://orbilu.uni.lu/handle/10993/32521"><b>"Permanent
-                          Reencryption: How to Survive Generations of
-                          Cryptanalysts to
-                          Come"</b></a>.<br> <i>Security Protocols
-                          XXV</i>, 2017.</li>
+                          <!-- <li>Marcus Völp, Francisco Rocha, Jérémie -->
+                          <!-- Decouchant, Jiangshan Yu, and Paulo -->
+                          <!-- Verissimo.<br> <a href="http://orbilu.uni.lu/handle/10993/32521"><b>"Permanent -->
+                          <!-- Reencryption: How to Survive Generations of -->
+                          <!-- Cryptanalysts to -->
+                          <!-- Come"</b></a>.<br> <i>Security Protocols -->
+                          <!-- XXV</i>, 2017.</li> -->
 
                           <li>Jiangshan Yu and Mark
                           Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
                           "Device attacker models: fact and
                           fiction"</b></a>.<br> <i>Security Protocols
                               XXIII</i>, pp. 158-167, 2015.</li>
-                          <li>Jiangshan Yu, Guilin Wang, and Yi
-                          Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably
-                          Secure Single Sign-on Scheme in Distributed Systems
-                          and Networks"</b></a>. <br><i>IEEE TrustCom</i>,
-                          pp. 271-278, 2012</li>
+                          <!-- <li>Jiangshan Yu, Guilin Wang, and Yi -->
+                          <!-- Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably -->
+                          <!-- Secure Single Sign-on Scheme in Distributed Systems -->
+                          <!-- and Networks"</b></a>. <br><i>IEEE TrustCom</i>, -->
+                          <!-- pp. 271-278, 2012</li> -->
                         </ol>
 
                             <br>
