--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ ourg.">
                                 title="Jiangshan Yu" /></a>
                         </div>
                         <div class="navbar-collapse collapse" id="templatemo-nav-bar">
-                            <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;">
-                                <!-- <li class="active"><a href="#templatemo-top">HOME</a></li> -->
+                            <ul class="nav navbar-nav navbar-right" style="margin-top: 40px;font-size:15px">
+                              <!-- <li class="active"><a href="#templatemo-top">HOME</a></li> -->
                                 <li><a href="#templatemo-About">ABOUT</a></li>
                                 <li><a href="#templatemo-Impact">IMPACT</a></li>
                                 <li><a href="#templatemo-Publications">PUBLICATIONS</a></li>
@@ -70,7 +70,7 @@ ourg.">
         <div class="templatemo-welcome" id="templatemo-About">
           <div class="container">
             <div class="row">
-              <div class="templatemo-line-header" style="margin-top: -100px;" >
+              <div class="templatemo-line-header" style="margin-top: -100px;margin-bottom: -100px;" >
                 <div class="text-center">
                             <!-- <hr class="team_hr team_hr_left -->
                             <!-- hr_gray"/><span class="txt_darkgrey">MARTIAL ARTS</span> -->
@@ -154,7 +154,7 @@ ourg.">
                             been accepted by <b>CSF'19</b> and <b>AsiaCCS'19</b>.
                            </li>
                           <li>
-                            <b>[2019-03-25] </b> RepuCoin has been
+                            <b>[2019-03-25] </b> <b>RepuCoin</b> has been
                            covered by over 60 news media globally
                            including our
                            <i> <a href="https://www.monash.edu/news/articles/world-first-secure-blockchain-with-good-reputati
@@ -406,7 +406,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Verissimo. <br><b>"RepuCoin: Your
                                   Reputation is Your Power"</b>.<br>
                                   <i>
-                                    IEEE Transactions on Computers.
+                                    IEEE Transactions on Computers (<b>IEEE TC</b>).
                                   </i> 2019. 
                                 </li>
 
@@ -417,7 +417,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Software-Defined Networks"</b>.<br>
                                   <i>
                                     ACM Transactions on Privacy and
-                          Security (ACM TOPS, previously known as ACM
+                          Security (<b>ACM TOPS</b>, previously known as ACM
                           TISSEC.)
                                   </i> 2019. (<a href="doc/paper/ANCHOR-proof.zip">Tamarin
                                   code</a>)
@@ -431,7 +431,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   framework for secure
                                   communications"</b>.<br>
                                   <i>
-                                    IEEE Security & Privacy
+                                    <b>IEEE Security & Privacy</b>
                                   </i>, Vol. 16, No.5, pp. 60-70, 2018.
                                 </li>
 
@@ -441,7 +441,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Detecting Endpoint Compromise In
                                   Messaging"</a></b>.<br>
                                   <i>IEEE Transactions on Information
-                                    Forensics and Security (TIFS)</i>,
+                                    Forensics and Security (<b>IEEE TIFS</b>)</i>,
                                     Vol. 13, No.1, pp. 106-118,
                                     2018. (<a href="doc/paper/DECIM-proof.zip">Tamarin
                                     code</a>)
@@ -450,8 +450,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Jiangshan Yu, Vincent Cheval, and Mark
                             Ryan. <br><a href="https://arxiv.org/pdf/1408.1023.pdf"><b>"DTKI:
                             a new formalized PKI with verifiable
-                            trusted parties"</b></a>. <br><i> The
-                            computer Journal </i>, Vol. 59, No. 11,
+                            trusted parties"</b></a>. <br><i> <b>The
+                            computer Journal </b></i>, Vol. 59, No. 11,
                             pp. 1695-1713,
                             2016. (<a href="doc/paper/DTKI-proof.zip">Tamarin
                             code</a>
@@ -466,7 +466,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Provably Secure
                             Instantiation"</a></b>. <br><i>IEEE
                             Transactions on Information Forensics and
-                            Security (TIFS)</i>, Vol.9, No.12 ,
+                            Security (<b>IEEE TIFS</b>)</i>, Vol.9, No.12 ,
                             pp. 2302-2313, 2014.
                           </li>
                           <li>Guilin Wang, Jiangshan Yu, Qi
@@ -474,7 +474,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           Analysis of A Single Sign-On Mechanism for
                           Distributed Computer
                           Networks"</a></b>.<br> <i>IEEE Transactions
-                          on Industrial Informatics (TII)</i>, Vol.9, No.1,
+                          on Industrial Informatics (<b>IEEE TII</b>)</i>, Vol.9, No.1,
                           pp.294-302, 2013.
                           </li>
                         </ol>
@@ -486,7 +486,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Veríssimo.<br> <b>Re-thinking untraceability in the
-                          CryptoNote-style blockchain.</b> <br><i>IEEE Computer Security Foundations Symposium (CSF) 2019.</i>
+                          CryptoNote-style blockchain.</b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>) 2019.</i>
                            </li>
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
@@ -495,8 +495,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Empirical Traceability Analysis of
                             CryptoNote-Style
                             Blockchains"</a></b>. <br> <i> Financial
-                            Cryptography and Data Security 2019
-                            (FC19).</i>
+                            Cryptography and Data Security
+                            (<b>FC</b>) 2019.</i>
+                          </li>
+                          <li>
+                          Dimaz Ankaa Wijaya, Joseph Liu, Ron
+                          Steinfeld, Dongxi Liu, Jiangshan
+                          Yu.<br> <b>"On The Unforkability of
+                          Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
                           </li>
                           <!-- <li> -->
                           <!--   Runchao Han, Jiangshan Yu, Joseph Liu, and -->
@@ -510,14 +516,14 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
                             Detecting the Misuse of Secrets:
                             Foundations, Design Principles, and
-                            Applications"</b></a>. <br> <i> IEEE CSF 2017.
+                            Applications"</b></a>. <br> <i> IEEE <b>CSF</b> 2017.
                             </i>
                           </li>
 
                           <li>
                             Jiangshan Yu, Mark Ryan, and Liqun
                             Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
-                            compromisable storage systems"</b></a>, <br> <i>IEEE TrustCom 2017.</i>
+                            compromisable storage systems"</b></a>, <br> <i>IEEE <b>TrustCom</b> 2017.</i>
                           </li>
 
                           <!-- <li>Marcus Völp, Francisco Rocha, Jérémie -->
@@ -532,7 +538,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
                           "Device attacker models: fact and
                           fiction"</b></a>.<br> <i>Security Protocols
-                              XXIII</i>, pp. 158-167, 2015.</li>
+                              XXIII (<b>SPW</b>)</i>, pp. 158-167, 2015.</li>
                           <!-- <li>Jiangshan Yu, Guilin Wang, and Yi -->
                           <!-- Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably -->
                           <!-- Secure Single Sign-on Scheme in Distributed Systems -->
