--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li>
                                   Jiangshan Yu, David Kozhaya, Jeremie
                                   Decouchant, and Paulo
-                                  Verissimo. <br><b>"RepuCoin: Your
-                                  Reputation is Your Power"</b>.<br>
+                                  Verissimo. <br><b><a href="https://eprint.iacr.org/2018/239.pdf">"RepuCoin: Your
+                                  Reputation is Your Power"</a></b>.<br>
                                   <i>
                                     IEEE Transactions on Computers (<b>IEEE TC</b>).
                                   </i> 2019. 
@@ -412,9 +412,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
                                 <li>
                                   Diego Kreutz, Jiangshan Yu, Fernando
-                                  Ramos, and Paulo Verissimo. <br><b>"ANCHOR:
+                                  Ramos, and Paulo Verissimo. <br><b><a href="https://arxiv.org/pdf/1711.03636.pdf">"ANCHOR:
                                   logically-centralized security for
-                                  Software-Defined Networks"</b>.<br>
+                                  Software-Defined Networks"</a></b>.<br>
                                   <i>
                                     ACM Transactions on Privacy and
                           Security (<b>ACM TOPS</b>, previously known as ACM
@@ -426,10 +426,10 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 <li>
                                   Diego Kreutz, Jiangshan Yu, Paulo
                                   Verissimo, Catia Magalhaes, and Fernando
-                                  Ramos. <br><b>"The KISS principle in
+                                  Ramos. <br><b><a href="https://ieeexplore.ieee.org/document/8490167">"The KISS principle in
                                   Software-Defined Networking: a
                                   framework for secure
-                                  communications"</b>.<br>
+                                  communications"</a></b>.<br>
                                   <i>
                                     <b>IEEE Security & Privacy</b>
                                   </i>, Vol. 16, No.5, pp. 60-70, 2018.
@@ -485,8 +485,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               <ol type="1" start = "9">
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
-                          Veríssimo.<br> <b>Re-thinking untraceability in the
-                          CryptoNote-style blockchain.</b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>) 2019.</i>
+                          Veríssimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
+                          CryptoNote-style blockchain.</a></b> <br><i>IEEE Computer Security Foundations Symposium (<b>CSF</b>) 2019.</i>
                            </li>
                           <li>
                             Zuoxia Yu, Man Ho Au, Jiangshan Yu, Rupeng
