--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             <hr class="team_hr team_hr_right hr_gray" />
                         </div>
                         <div class="col-lg-offset-0">
-                          <font size="5"><b>Selected Publications: </b></font><br><br><font size="4"> 
+                          <font size="5"><b>Selected Recent Publications: </b></font><br><br><font size="4"> 
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
-                              and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
-  <b>DBLP</b></a> page.)
+                              and<!--  <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan"> -->
+                              <!-- <b>DBLP</b></a> page.  --> a <a href="web/pub.html"><b>list</b></a> of full publications.)
 <br><br>
 	                  <ul type="square"; style="margin-bottom:
                                                     6px">
@@ -424,18 +424,6 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 </li>
 
                                 <li>
-                                  Diego Kreutz, Jiangshan Yu, Paulo
-                                  Verissimo, Catia Magalhaes, and Fernando
-                                  Ramos. <br><b><a href="https://ieeexplore.ieee.org/document/8490167">"The KISS principle in
-                                  Software-Defined Networking: a
-                                  framework for secure
-                                  communications"</a></b>.<br>
-                                  <i>
-                                    <b>IEEE Security & Privacy</b>
-                                  </i>, Vol. 16, No.5, pp. 60-70, 2018.
-                                </li>
-
-                                <li>
                                   Jiangshan Yu, Mark Ryan, and Cas
                                   Cremers. <br><b><a href="http://eprint.iacr.org/2015/486.pdf">"DECIM:
                                   Detecting Endpoint Compromise In
@@ -458,31 +446,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             and <a href="doc/paper/DTKI-report.pdf">
                             Technical Report</a>)
                         </li>
-                          <li>
-                            Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
-                            Gao.<br> <a href="doc/paper/TIFS-2014.pdf"><b>"An
-                            Efficient and Improved Generic Framework
-                            for Three-Factor Authentication with
-                            Provably Secure
-                            Instantiation"</a></b>. <br><i>IEEE
-                            Transactions on Information Forensics and
-                            Security (<b>IEEE TIFS</b>)</i>, Vol.9, No.12 ,
-                            pp. 2302-2313, 2014.
-                          </li>
-                          <li>Guilin Wang, Jiangshan Yu, Qi
-                          Xie. <br><a href="doc/paper/TII-2013.pdf"><b>"Security
-                          Analysis of A Single Sign-On Mechanism for
-                          Distributed Computer
-                          Networks"</a></b>.<br> <i>IEEE Transactions
-                          on Industrial Informatics (<b>IEEE TII</b>)</i>, Vol.9, No.1,
-                          pp.294-302, 2013.
-                          </li>
                         </ol>
 
                         <br>
 
 	                    <li><b>Conference:</b><br>
-                              <ol type="1" start = "9">
+                              <ol type="1" start = "6">
                            <li>
                           Jiangshan Yu, Man Ho Allen Au, and Paulo
                           Veríssimo.<br> <b><a href="https://eprint.iacr.org/2019/186.pdf">Re-thinking untraceability in the
@@ -504,13 +473,6 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           Yu.<br> <b>"On The Unforkability of
                           Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
                           </li>
-                          <!-- <li> -->
-                          <!--   Runchao Han, Jiangshan Yu, Joseph Liu, and -->
-                          <!--   Peng Zhang. <br> <a href="http://xxhb.fjnu.edu.cn/_upload/tpl/06/5d/1629/template1629/papers/17.pdf"><b>"Evaluating -->
-                          <!--   CryptoNote-Style -->
-                          <!--   blockchains"</b></a>. <br> <i> Inscrypt -->
-                          <!--   2018.</i> -->
-                          <!-- </li> -->
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
@@ -519,32 +481,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                             Applications"</b></a>. <br> <i> IEEE <b>CSF</b> 2017.
                             </i>
                           </li>
-
-                          <li>
+                           <li>
                             Jiangshan Yu, Mark Ryan, and Liqun
                             Chen. <br> <a href="http://eprint.iacr.org/2017/485.pdf"><b>"Authenticating
                             compromisable storage systems"</b></a>, <br> <i>IEEE <b>TrustCom</b> 2017.</i>
                           </li>
-
-                          <!-- <li>Marcus Völp, Francisco Rocha, Jérémie -->
-                          <!-- Decouchant, Jiangshan Yu, and Paulo -->
-                          <!-- Verissimo.<br> <a href="http://orbilu.uni.lu/handle/10993/32521"><b>"Permanent -->
-                          <!-- Reencryption: How to Survive Generations of -->
-                          <!-- Cryptanalysts to -->
-                          <!-- Come"</b></a>.<br> <i>Security Protocols -->
-                          <!-- XXV</i>, 2017.</li> -->
-
-                          <li>Jiangshan Yu and Mark
-                          Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
-                          "Device attacker models: fact and
-                          fiction"</b></a>.<br> <i>Security Protocols
-                              XXIII (<b>SPW</b>)</i>, pp. 158-167, 2015.</li>
-                          <!-- <li>Jiangshan Yu, Guilin Wang, and Yi -->
-                          <!-- Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably -->
-                          <!-- Secure Single Sign-on Scheme in Distributed Systems -->
-                          <!-- and Networks"</b></a>. <br><i>IEEE TrustCom</i>, -->
-                          <!-- pp. 271-278, 2012</li> -->
-                        </ol>
+                              </ol>
 
                             <br>
                             <li><b>Patent:</b><br>
