--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
                               and<!--  <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan"> -->
-                              <!-- <b>DBLP</b></a> page.  --> a <a href="web/pub.html"><b>list</b></a> of full publications.)
+                              <!-- <b>DBLP</b></a> page.  --> a <a href="web/pub.html"><b>list of full publications</b></a>.)
 <br><br>
 	                  <ul type="square"; style="margin-bottom:
                                                     6px">
