--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@ ourg.">
                     <div class="col-lg-offset-4 JYuinfo_right">
                       <p> I'm a lecturer (equivalent
                       to U.S. assistant professor)
-                      at <a href="https://research.monash.edu/en/persons/jiangshan-yu"> Cybersecurity
-                      Lab</a>, Faculty of Information Technology, <a href="https://www.monash.edu">
+                      at  <a href="https://www.monash.edu">
                             Monash University
                           </a>, Australia, and an honorary research
                       fellow working
@@ -123,10 +122,8 @@ ourg.">
                       Prof. Mark Ryan</a>
                       (<a href="https://garage.ext.hp.com/us/en/hp-labs/hp_sponsors_new_chairincybersecurityattheuniversityofbirmingham.html">
                       HP Chair in Cybersecurity
-                          </a>) in
-                      the <a href="http://sec.cs.bham.ac.uk">
-                            Centre for Cyber Security and Privacy
-                          </a>, <a href="http://www.birmingham.ac.uk/">University
+                          </a>) at
+                      the  <a href="http://www.birmingham.ac.uk/">University
                       of Birmingham</a>, UK, where I received my PhD
                       in computer science. I did my postdoc
                       with <a href="http://wwwen.uni.lu/snt/people/paulo_esteves_verissimo">
