--- a/index.html
+++ b/index.html
@@ -663,16 +663,22 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Workshop on BlockChain
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
-                              <li><b>Comference Program Committee Member</b></li>
+                            <li><b>Comference Program Committee Member</b></li>
+                            <b>2019</b>
                               <ul type="circle">
                                 <li>
                                 The 38th IEEE International Symposium on
                                 Reliable Distributed
-                                Systems <b>(SRDS)</b>, 2019.</a>
+                                Systems <b>(SRDS)</b>
+                              </li>
+                                <li>
+                                   The 15th International Conference on
+                                   Information Security and Cryptology
+                                   Inscrypt <b>(Inscrypt)</b>
                               </li>
 
                                 <li>
-                                   The 20th International Conference on Cryptology in India <b>(Indocrypt)</b>, 2019.</a>
+                                   The 20th International Conference on Cryptology in India <b>(Indocrypt)</b>
                               </li>
 
                                 <li>
@@ -681,33 +687,39 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                     Privacy in Computing and
                                     Communications<b> (IEEE
                                     TrustCom)
-                                   </b>, 2019.</a>
-                              </li>
+                                   </b>
+                                </li>
+                              </ul>
+                              <b>2018</b>
+                              <ul type="circle">
                               <li>
                                 IEEE Global Communications
                                 Conference
-                                <b>(GLOBECOM)</b>, 2018.
+                                <b>(GLOBECOM)</b>
                               </li>
                               <li>
                                 DSN Workshop on Byzantine
                                 Consensus and Resilient
-                                Blockchains <b>(BCRB'18)</b>,
-                                2018.
+                                Blockchains <b>(BCRB)</b>
                               </li>
 
                               <li>
                                 IEEE
                                 International Conference on
-                                Communications <b>(ICC)</b>, 2018.
+                                Communications <b>(ICC)</b>
                               </li>
-
+                              </ul>
+                            <b>2017</b>
+                              <ul type="circle">
                               <li> International Conference on
                                   Information Security Practice and
-                                  Experience <b>(ISPEC)</b>, 2017.
+                                  Experience <b>(ISPEC)</b>
                               </li>
+                              </ul>
+                              <b>2016</b>
+                              <ul type="circle">
 	                      <li>Software Architecture for Big Data and the Cloud, 2016.</li>
                             </ul>
-                            
                             <br>
 
 	                    <li><b>Invited Reviewer (Journal):</b><br>
@@ -718,6 +730,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 	                            Security <b>(IEEE TIFS)</b></i></li>
                                 <li><i>IEEE Transactions on
 	                            Computers <b>(IEEE TC)</b></i></li>
+                                <li><i>
+                                      IEEE Transactions on Dependable and Secure Computing <b>(IEEE TDSC)</b>
+                                </i></li>
                                 <li><i>
                                       IEEE Transactions on Cloud
                                       Computing <b>(IEEE TCC)</b>
