--- a/index.html
+++ b/index.html
@@ -146,6 +146,14 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                            <b>[2019-04-26]</b> I'd been nominated and
+                                  selected as a <b>finalist (Technology
+                                  Application) for Endeavour Awards</b>,
+                                  which is Australia's Premier Awards
+                                  Program within the manufacturing
+                                  industry.
+                           </li>
+                           <li>
                             <b>[2019-04-22]</b> Our two papers on
                             blockchain transaction untraceability have
                             been accepted by <b>CSF'19</b> and <b>AsiaCCS'19</b>.
@@ -563,6 +571,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 
 	                    <li><b>Awards:</b><br>
 	                      <ol type="circle">
+                                <li> <b>Finalist (Technology
+                                  Application) for Endeavour
+                                  Awards</b>, Premier Awards Program
+                                  (Manufacturing Industry), Australia,
+                                  2019. </li>
+
                                 <li> <b>Chinese Government Award For
                                 Outstanding PhD Scholar Abroad</b>,
                                   2016. (3% in UK, 1% worldwide.)</li>
