--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   Harbin, Heilongjiang, China, 2009.</li>
                                 <li><b>Best Undergraduate Thesis Award</b>, Northeast Agricultural
                                   University, Harbin, Heilongjiang, China, 2009.</li>
-                                <li><b>Outstanding Academic Award</b>, The Northeast Agricultural
-                                  University, China, 2008.</li>
+                                <!-- <li><b>Outstanding Academic Award</b>, The Northeast Agricultural -->
+                                <!--   University, China, 2008.</li> -->
                                 <li>
                                   <b>First National Prize of China
                                   Contemporary Undergraduate
@@ -607,11 +607,11 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                   <b>Second National Prize of China Contemporary Undergraduate
                                   Mathematical Contest in Modeling</b>, China, 2006.
                                 </li>
-                                <li><b>Outstanding Student Award of The Northeast Agricultural
-                                  University</b>, China, 2006.</li>
-                                <li><b>Outstanding Student Leadership
-                                  Award</b>, The Northeast Agricultural
-                                  University, China, 2006.</li>
+                                <!-- <li><b>Outstanding Student Award of The Northeast Agricultural -->
+                                <!--   University</b>, China, 2006.</li> -->
+                                <!-- <li><b>Outstanding Student Leadership -->
+                                <!--   Award</b>, The Northeast Agricultural -->
+                                <!--   University, China, 2006.</li> -->
 	                      </ol>
 	                    </li>
                       <br>
