--- a/index.html
+++ b/index.html
@@ -664,8 +664,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                     </b></font><br><br><font size="4">
 	                  <ul type="disc"; style="margin-bottom:
                               6px">
-                            <li><b>Program (Co-)Chair</b></li>
+                            <li><b>Conference (Co-)Chair</b></li>
                             <ul type="circle">
+                              <!-- <li> -->
+                                <!--   Publicity Co-Chair International Conference on Information Security and Cryptology (Inscrypt) -->
+                                <!-- Provsec -->
+                              <!--   </li> -->
                               <li>
                                 <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
                                 10.4 - Technological and societal
@@ -701,6 +705,12 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                     Privacy in Computing and
                                     Communications<b> (IEEE
                                     TrustCom)
+                                   </b>
+                                </li>
+                                <li>
+                                   The 13th International Conference
+                                   on Network and System Security <b>
+                                   (NSS)
                                    </b>
                                 </li>
                               </ul>
