--- a/index.html
+++ b/index.html
@@ -478,6 +478,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                           Yu.<br> <b>"On The Unforkability of
                           Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
                           </li>
+                           <li>
+                             Jérémie Decouchant, Antoine Boutet, Jiangshan Yu and Paulo Verissimo<br>
+                             <b>
+                               P3LS: Plausible Deniability for
+                               Practical Privacy-Preserving Live
+                               Streaming.</a></b> <br><i>The 38th IEEE
+                               International Symposium on Reliable
+                               Distributed Systems (<b>SRDS</b>) 2019.</i>
+                           </li>
+
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu, and
                             Mark Ryan. <br> <a href="http://eprint.iacr.org/2017/234.pdf"><b>"Automatically
