--- a/web/pub.html
+++ b/web/pub.html
@@ -149,7 +149,16 @@
                           Steinfeld, Dongxi Liu, Jiangshan
                           Yu.<br> <b>"On The Unforkability of
                           Monero"</b>. <br><i>ACM  Asia Conference on Information, Computer and Communications Security (<b>ASIACCS</b>) 2019.</i>
-                          </li>
+                              </li>
+                              <li>
+                             Jérémie Decouchant, Antoine Boutet, Jiangshan Yu and Paulo Verissimo<br>
+                             <b>
+                               P3LS: Plausible Deniability for
+                               Practical Privacy-Preserving Live
+                               Streaming.</a></b> <br><i>The 38th IEEE
+                               International Symposium on Reliable
+                               Distributed Systems (<b>SRDS</b>) 2019.</i>
+                           </li>
                           <li>
                             Liangrong Zhao and Jiangshan Yu. <br> <b>
                             "Evaluating DAG-based Blockchains for
