--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@ ourg.">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
                           <li>
+                            <b>[2019-06-26]</b> Our paper on
+                                  Privacy-Preserving Live Streaming
+                                  has been accepted by <b>SRDS'19</b>.
+                           </li>
+                          <li>
                             <b>[2019-04-26]</b> I'd been nominated and
                                   selected as a <b>finalist (Technology
                                   Application) for Endeavour Awards</b>,
@@ -162,8 +167,7 @@ ourg.">
                             <b>[2019-03-25] </b> <b>RepuCoin</b> has been
                            covered by over 60 news media globally
                            including our
-                           <i> <a href="https://www.monash.edu/news/articles/world-first-secure-blockchain-with-good-reputati
-on">Monash
+                           <i> <a href="https://www.monash.edu/news/articles/world-first-secure-blockchain-with-good-reputation">Monash
 News</a>, <a href="https://www.finder.com.au/repucoin-monash-reveals-51-resistant-10k-tps-pow-blockchain">
 Finder</a>, <a href="https://www.toutiao.com/i6671048333609402887">今
 日头条(Toutiao)</a>, ZDNet, Sohu, BTC Wires, ScienceDaily, Ethereum
